--- a/client/src/assests/css/sass/pageNotFound.scss
+++ b/client/src/assests/css/sass/pageNotFound.scss
@@ -18,8 +18,9 @@
     padding-top: 14vh;
     padding-bottom: 14vh;
     h1 {
-      font-weight: 400;
-      font-family: 'Raleway', sans-serif;
+      font-weight: 300;
+      font-family: 'Roboto', sans-serif;
+      user-select: none;
     }
   }
 }
