--- a/client/src/assests/css/sass/profile.scss
+++ b/client/src/assests/css/sass/profile.scss
@@ -9,14 +9,26 @@
     margin: auto;
     padding: 5rem 0;
 
+    @media (max-width: 1500px) {
+      width: 85%;
+    }
+    @media (max-width: 1200px) {
+      width: 98%;
+    }
+
     .flex_parent {
       width: 100%;
       display: flex;
+      flex-direction: row;
       justify-content: space-between;
       box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
       border-radius: 10px;
       overflow: hidden;
       background: white;
+
+      @media (max-width: 1000px) {
+        flex-direction: column;
+      }
 
       .flex_child:first-child {
         width: 30%;
@@ -24,11 +36,17 @@
         background-image: linear-gradient(to right bottom, #7dd56f, #28b487);
         padding: 3.3rem 0;
         color: white;
-        margin: 10px;
+        // margin: 10px;
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
         font-weight: 300;
         min-height: 700px;
+        @media (max-width: 1000px) {
+          width: 100%;
+          min-height: 100px;
+          border-bottom-left-radius: 0px;
+          border-top-right-radius: 0px;
+        }
 
         .teamImageNameUniv {
           text-align: center;
@@ -61,6 +79,14 @@
       .flex_child:last-child {
         width: 70%;
         background-color: #fff;
+        @media (max-width: 1000px) {
+          width: 95%;
+          margin: auto;
+        }
+        @media (max-width: 700px) {
+          width: 100%;
+          margin: auto;
+        }
 
         .info-container {
           padding: 25px 5px;
@@ -76,9 +102,8 @@
             padding: 10px 0;
             h4 {
               font-weight: 500;
-              font-size: 2rem;
+              font-size: 20px;
               padding-left: 1.3rem;
-              padding-top: 2px;
             }
           }
           .section-body {
@@ -99,9 +124,24 @@
               justify-content: space-between;
               padding: 10px 0;
               margin-left: 45px;
+
+              @media (max-width: 1000px) {
+                margin-left: 12px;
+                flex-direction: column;
+                padding: 0;
+                padding-top: 10px;
+                padding-left: 7px;
+              }
+
               .field {
                 width: 45%;
-                white-space: nowrap;
+
+                @media (max-width: 1000px) {
+                  width: 100%;
+                  &:first-child {
+                    padding-bottom: 10px;
+                  }
+                }
 
                 .field-name {
                   color: gray;
@@ -111,6 +151,8 @@
                   color: #333;
                   font-size: 16.5px;
                   padding: 5px 0;
+                  white-space: break-word;
+                  letter-spacing: .4px;
                 }
               }
             }
@@ -120,6 +162,7 @@
               width: 90%;
               margin: auto;
               padding: 15px 0;
+
               .image {
                 margin: 0 2px;
                 margin-right: 2rem;
@@ -134,6 +177,25 @@
                 .about {
                   color: gray;
                   font-size: 13.5px;
+                }
+              }
+
+              @media (max-width: 1000px) {
+                width: 95%;
+                padding: 5px 0;
+                .texts {
+                  padding: 0px 0;
+                  white-space: nowrap;
+                  padding-bottom: 2rem;
+                  padding-top: 2rem;
+                  .name {
+                    font-size: 16.5px;
+                    padding-bottom: 2px;
+                  }
+                  .about {
+                    color: gray;
+                    font-size: 13.5px;
+                  }
                 }
               }
             }
