--- a/client/src/assests/css/sass/home.scss
+++ b/client/src/assests/css/sass/home.scss
@@ -100,7 +100,7 @@
       padding-top: 2rem;
     }
 
-    @media(max-width: 772px) { 
+    @media (max-width: 772px) {
       padding-top: 2.5rem;
     }
     h2 {
@@ -202,7 +202,6 @@
       border: 4px solid #0f3057;
       font-size: 2.5rem;
 
-
       > p {
         &:last-child {
           font-size: 1.5rem;
@@ -251,7 +250,7 @@
     url(../images/importantLinks.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  @media(min-width: 772px) {
+  @media (min-width: 772px) {
     background-attachment: fixed;
   }
   padding: 3rem 1rem;
@@ -292,16 +291,21 @@
   width: 75%;
   margin: auto;
   padding: 2.5rem 0.5rem 1rem 0.5rem;
-  @media(max-width: 1350px) {
+  @media (max-width: 1350px) {
     width: 95%;
   }
-  @media(max-width: 1000px) {
+  @media (max-width: 1000px) {
     width: 99%;
+  }
+
+  @media (max-width: 700px) {
+    justify-content: center;
   }
 
   .flex_child {
     width: 290px;
     margin-bottom: 2rem;
+    margin: 5px;
 
     background: rgb(255, 255, 255);
     box-shadow: rgba(19, 15, 235, 0.164) 3px 6px 15px 0px;
@@ -310,6 +314,10 @@
     // border-top: 5px solid rgb(245, 23, 103);
     border-radius: 7px;
     cursor: pointer;
+
+    @media (max-width: 700px) {
+      margin: 1rem;
+    }
 
     &_header {
       text-align: center;
