--- a/client/src/assests/css/adminTeams.css
+++ b/client/src/assests/css/adminTeams.css
@@ -64,13 +64,20 @@ ul {
   font-weight: 300;
   font-size: 6rem;
   padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
 }
 
 @media (max-width: 500px) {
   .registeredTeamsWrapper .registeredTeams__header h1 {
     font-size: 5rem;
   }
+}
+
+.registeredTeamsWrapper .registeredTeams__header h4 {
+  text-align: center;
+  font-size: 30px;
+  padding-bottom: 1.3rem;
+  font-weight: 300;
 }
 
 .registeredTeamsWrapper .registeredTeams__subheader h3 {
