--- a/client/src/assests/css/contact.css
+++ b/client/src/assests/css/contact.css
@@ -354,3 +354,46 @@ ul {
 .contactUsForm_flx_contact_info_des_phone {
   max-width: 300px;
 }
+
+.faq_container {
+  max-width: 1100px;
+  margin: 2rem auto 5rem auto;
+  font-family: 'Open Sans';
+}
+
+.iconStyle {
+  color: #7ed56f;
+  font-size: 30px;
+  padding-right: 12px;
+}
+
+.optionContainer {
+  background-color: inherit;
+  margin-top: 0.7rem;
+  width: 95%;
+  font-size: 1.8rem;
+  padding: 5px 10px 5px 3px;
+  border: none;
+  border-bottom: 2px solid #ccc;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  color: #444444;
+  font-family: 'Roboto', sans-serif;
+}
+
+.optionContainer:focus {
+  outline: none;
+  border: none;
+  border-bottom: 2px solid #ccc;
+}
+
+.optionContainer option {
+  color: #444444;
+  font-size: 17.5px;
+}
+
+.optionContainer option:disabled {
+  background: #c9c9c9;
+  color: #8d8d8d;
+}
