--- a/client/src/assests/css/sass/adminTeams.scss
+++ b/client/src/assests/css/sass/adminTeams.scss
@@ -13,11 +13,17 @@
         font-weight: 300;
         font-size: 6rem;
         padding-top: 2rem;
-        padding-bottom: 2rem;
+        padding-bottom: 1rem;
 
         @media (max-width: 500px) {
           font-size: 5rem;
         }
+      }
+      h4 {
+        text-align: center;
+        font-size: 30px;
+        padding-bottom: 1.3rem;
+        font-weight: 300;
       }
     }
     &__subheader {
