--- a/client/src/assests/css/sass/contact.scss
+++ b/client/src/assests/css/sass/contact.scss
@@ -3,7 +3,7 @@
 
 .contact {
   @include VectorArt;
-  
+
   &__nav {
   }
 
@@ -186,4 +186,43 @@
 
 .contactUsForm_flx_contact_info_des_phone {
   max-width: 300px;
+}
+
+.faq_container {
+  max-width: 1100px;
+  margin: 2rem auto 5rem auto;
+  font-family: 'Open Sans';
+}
+
+.iconStyle {
+  color: #7ed56f;
+  font-size: 30px;
+  padding-right: 12px;
+}
+
+.optionContainer {
+  background-color: inherit;
+  margin-top: 0.7rem;
+  width: 95%;
+  font-size: 1.8rem;
+  padding: 5px 10px 5px 3px;
+  border: none;
+  border-bottom: 2px solid #ccc;
+  appearance: none;
+  color: rgb(68, 68, 68);
+  font-family: 'Roboto', sans-serif;
+  &:focus {
+    outline: none;
+    border: none;
+    border-bottom: 2px solid #ccc;
+  }
+
+  option {
+    color: rgb(68, 68, 68);
+    font-size: 17.5px;
+    &:disabled {
+      background: #c9c9c9;
+      color: #8d8d8d;
+    }
+  }
 }
