--- a/client/src/assests/css/adminCustomization.css
+++ b/client/src/assests/css/adminCustomization.css
@@ -53,6 +53,13 @@ ul {
   text-align: center;
 }
 
+button.MuiButtonBase-root:active {
+  -webkit-transform: none;
+      -ms-transform: none;
+       -o-transform: none;
+          transform: none;
+}
+
 .container {
   padding: 20px;
   padding-top: 23px;
