--- a/client/src/assests/css/home.css
+++ b/client/src/assests/css/home.css
@@ -53,6 +53,13 @@ ul {
   text-align: center;
 }
 
+button.MuiButtonBase-root:active {
+  -webkit-transform: none;
+      -ms-transform: none;
+       -o-transform: none;
+          transform: none;
+}
+
 .Home {
   background: white;
 }
@@ -101,11 +108,12 @@ ul {
   }
 }
 
+.Home__navbar .Home__banner_text-secondary h2,
 .Home__navbar .Home__banner_text-secondary h3 {
-  font-size: 4.4rem;
-  letter-spacing: 1.5px;
+  font-size: 4rem;
+  letter-spacing: 1.6px;
   font-weight: 400;
-  padding-bottom: 2rem;
+  padding-bottom: 1.3rem;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -114,13 +122,25 @@ ul {
 }
 
 @media (max-width: 1200px) {
+  .Home__navbar .Home__banner_text-secondary h2,
   .Home__navbar .Home__banner_text-secondary h3 {
-    font-size: 4rem;
+    font-size: 3rem;
+  }
+}
+
+.Home__navbar .Home__banner_text-secondary h2 {
+  font-size: 5.5rem;
+  padding-bottom: 1rem;
+}
+
+@media (max-width: 1200px) {
+  .Home__navbar .Home__banner_text-secondary h2 {
+    font-size: 3.9rem;
   }
 }
 
 .Home__navbar .Home__banner_text-secondary h5 {
-  font-size: 4.45rem;
+  font-size: 4rem;
   padding-bottom: 2.8rem;
   font-weight: 400;
 }
@@ -131,6 +151,16 @@ ul {
 
 @media (max-width: 700px) {
   .Home_banner_button button:nth-child(2) {
+    margin-left: 0;
+  }
+}
+
+.Home_banner_button button:nth-child(3) {
+  margin-left: 13px;
+}
+
+@media (max-width: 700px) {
+  .Home_banner_button button:nth-child(3) {
     margin-left: 0;
   }
 }
@@ -362,6 +392,7 @@ ul {
   -webkit-background-size: cover;
           background-size: cover;
   padding: 3rem 1rem;
+  position: relative;
 }
 
 @media (min-width: 772px) {
@@ -773,4 +804,14 @@ ul {
 
 .mainIcpcLogo {
   display: none;
+}
+
+#importantSectionId {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100px;
+  width: 100px;
+  background-color: 'red';
+  color: white;
 }
