--- a/client/src/assests/css/index.css
+++ b/client/src/assests/css/index.css
@@ -52,3 +52,10 @@ ul {
 .text-center {
   text-align: center;
 }
+
+button.MuiButtonBase-root:active {
+  -webkit-transform: none;
+      -ms-transform: none;
+       -o-transform: none;
+          transform: none;
+}
