--- a/client/src/assests/css/sass/gallery.scss
+++ b/client/src/assests/css/sass/gallery.scss
@@ -51,7 +51,7 @@
       padding-bottom: 1px;
 
       @media (max-width: 1550px) {
-        margin: .5rem;
+        margin: 0.5rem;
       }
 
       @media (max-width: 1200px) {
@@ -67,11 +67,6 @@
       img {
         width: 100%;
         transition: transform 0.6s;
-
-        &:hover {
-          cursor: pointer;
-          transform: scale(1.1);
-        }
       }
     }
   }
