--- a/client/src/assests/css/sass/paymentConfirm.scss
+++ b/client/src/assests/css/sass/paymentConfirm.scss
@@ -46,6 +46,7 @@
   }
   .TeamDetails {
     padding: 2rem;
+    max-width: 60%;
     @media (max-width: 800px) {
       padding-left: 0.3rem;
     }
@@ -61,6 +62,7 @@
         font-weight: 700;
         font-size: 25px;
         letter-spacing: 0.1;
+        align-self: center;
       }
       p:last-child {
         align-self: flex-end;
