--- a/client/src/assests/css/profile.css
+++ b/client/src/assests/css/profile.css
@@ -28,15 +28,11 @@ li {
 
 button:focus {
   -webkit-transform: translateY(0px);
-      -ms-transform: translateY(0px);
-       -o-transform: translateY(0px);
           transform: translateY(0px);
 }
 
 button:active {
   -webkit-transform: translateY(3px);
-      -ms-transform: translateY(3px);
-       -o-transform: translateY(3px);
           transform: translateY(3px);
 }
 
@@ -78,16 +74,13 @@ ul {
 .profile__wrapper .flex_parent {
   width: 100%;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
       -ms-flex-direction: row;
           flex-direction: row;
   -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
   -webkit-box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
@@ -101,7 +94,6 @@ ul {
   .profile__wrapper .flex_parent {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -111,8 +103,6 @@ ul {
   width: 30%;
   display: inline-block;
   background-image: -webkit-gradient(linear, left top, right bottom, from(#7dd56f), to(#28b487));
-  background-image: -webkit-linear-gradient(left top, #7dd56f, #28b487);
-  background-image: -o-linear-gradient(left top, #7dd56f, #28b487);
   background-image: linear-gradient(to right bottom, #7dd56f, #28b487);
   padding: 3.3rem 0;
   color: white;
@@ -184,11 +174,9 @@ ul {
 
 .profile__wrapper .flex_parent .flex_child:last-child .info-container .section-header {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
   width: 95%;
@@ -221,11 +209,9 @@ ul {
 
 .profile__wrapper .flex_parent .flex_child:last-child .info-container .section-body .row {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 10px 0;
@@ -237,7 +223,6 @@ ul {
     margin-left: 12px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
     padding: 0;
@@ -274,7 +259,6 @@ ul {
 
 .profile__wrapper .flex_parent .flex_child:last-child .info-container .section-body .each-user {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   width: 90%;
@@ -333,11 +317,9 @@ ul {
 .tabs .tab {
   cursor: pointer;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
   padding: 12.5px 10px 12.5px 2.5rem;
@@ -358,3 +340,4 @@ ul {
   padding-left: 1.8rem;
   color: white;
 }
+/*# sourceMappingURL=profile.css.map */
