--- a/client/src/assests/css/adminTeams.css
+++ b/client/src/assests/css/adminTeams.css
@@ -28,15 +28,11 @@ li {
 
 button:focus {
   -webkit-transform: translateY(0px);
-      -ms-transform: translateY(0px);
-       -o-transform: translateY(0px);
           transform: translateY(0px);
 }
 
 button:active {
   -webkit-transform: translateY(3px);
-      -ms-transform: translateY(3px);
-       -o-transform: translateY(3px);
           transform: translateY(3px);
 }
 
@@ -106,3 +102,4 @@ ul {
     width: 98%;
   }
 }
+/*# sourceMappingURL=adminTeams.css.map */
