--- a/client/src/assests/css/contact.css
+++ b/client/src/assests/css/contact.css
@@ -28,15 +28,11 @@ li {
 
 button:focus {
   -webkit-transform: translateY(0px);
-      -ms-transform: translateY(0px);
-       -o-transform: translateY(0px);
           transform: translateY(0px);
 }
 
 button:active {
   -webkit-transform: translateY(3px);
-      -ms-transform: translateY(3px);
-       -o-transform: translateY(3px);
           transform: translateY(3px);
 }
 
@@ -91,7 +87,6 @@ ul {
 .contactUsForm_flx {
   background: white;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   border-radius: 10px;
@@ -105,7 +100,6 @@ ul {
   .contactUsForm_flx {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
-    -webkit-flex-direction: column-reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
   }
@@ -138,8 +132,6 @@ ul {
   border: none;
   outline: none;
   background: -webkit-gradient(linear, left top, right top, from(#7ed56f), to(#28b485));
-  background: -webkit-linear-gradient(left, #7ed56f, #28b485);
-  background: -o-linear-gradient(left, #7ed56f, #28b485);
   background: linear-gradient(to right, #7ed56f, #28b485);
   color: white;
   border-radius: 4px;
@@ -182,13 +174,6 @@ ul {
   font-family: 'Open Sans';
 }
 
-.contactUsForm_flx_form form .textbox input::-moz-placeholder,
-.contactUsForm_flx_form form .textarea input::-moz-placeholder {
-  font-size: 1.6rem;
-  color: #bbbbbb;
-  font-family: 'Open Sans';
-}
-
 .contactUsForm_flx_form form .textbox input:-ms-input-placeholder,
 .contactUsForm_flx_form form .textarea input:-ms-input-placeholder {
   font-size: 1.6rem;
@@ -212,13 +197,6 @@ ul {
 
 .contactUsForm_flx_form form .textbox textarea::-webkit-input-placeholder,
 .contactUsForm_flx_form form .textarea textarea::-webkit-input-placeholder {
-  font-size: 1.6rem;
-  color: #bbbbbb;
-  font-family: 'Open Sans';
-}
-
-.contactUsForm_flx_form form .textbox textarea::-moz-placeholder,
-.contactUsForm_flx_form form .textarea textarea::-moz-placeholder {
   font-size: 1.6rem;
   color: #bbbbbb;
   font-family: 'Open Sans';
@@ -257,7 +235,6 @@ ul {
   border: none;
   border-bottom: 2px solid #ccc;
   -webkit-transition: border-bottom 0.25s ease;
-  -o-transition: border-bottom 0.25s ease;
   transition: border-bottom 0.25s ease;
   color: #444444;
   font-family: 'Roboto', sans-serif;
@@ -279,8 +256,6 @@ ul {
   width: 50%;
   padding: 4rem 5.3rem;
   background-image: -webkit-gradient(linear, right top, left top, from(#7ed56f), to(#28b485));
-  background-image: -webkit-linear-gradient(right, #7ed56f, #28b485);
-  background-image: -o-linear-gradient(right, #7ed56f, #28b485);
   background-image: linear-gradient(to left, #7ed56f, #28b485);
   border-radius: 0 10px 10px 0;
   color: white;
@@ -312,11 +287,9 @@ ul {
 
 .contactUsForm_flx_contact_info {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 3rem;
@@ -326,11 +299,9 @@ ul {
   margin-right: 1.5rem;
   font-size: 2.4rem;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: start;
-  -webkit-align-items: flex-start;
       -ms-flex-align: start;
           align-items: flex-start;
   padding-top: 2px;
@@ -341,14 +312,13 @@ ul {
 }
 
 .contactUsForm_flx_contact_info_des {
-  -webkit-align-self: flex-end;
-      -ms-flex-item-align: end;
-          align-self: flex-end;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
   padding-left: 5px;
 }
 
 .contactUsForm_flx_contact_info_des p {
-  line-height: 1.4;
+  line-height: 1.7;
 }
 
 .contactUsForm_flx_contact_info_des_phone {
@@ -397,3 +367,175 @@ ul {
   background: #c9c9c9;
   color: #8d8d8d;
 }
+
+/* -- Admin Emails -- */
+.EmailBox {
+  padding: 50px;
+}
+
+@media (max-width: 600px) {
+  .EmailBox {
+    padding: 20px;
+  }
+}
+
+.EmailBox .EmailPalette {
+  background: #fff;
+  width: 50%;
+  margin: auto;
+  border-radius: 20px;
+  -webkit-box-shadow: 2px 2px 5px 2px #ccc;
+          box-shadow: 2px 2px 5px 2px #ccc;
+}
+
+@media (max-width: 1350px) {
+  .EmailBox .EmailPalette {
+    width: 70%;
+  }
+}
+
+@media (max-width: 900px) {
+  .EmailBox .EmailPalette {
+    width: 95%;
+  }
+}
+
+.EmailBox .EmailPalette .EmailContents {
+  width: 70%;
+  margin: auto;
+  padding-top: 10px;
+  padding-bottom: 50px;
+}
+
+@media (max-width: 600px) {
+  .EmailBox .EmailPalette .EmailContents {
+    width: 100%;
+  }
+}
+
+.EmailBox .EmailPalette .EmailContents .flex-parent {
+  margin-top: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media (max-width: 600px) {
+  .EmailBox .EmailPalette .EmailContents .flex-parent {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: auto;
+    margin-top: 20px;
+  }
+}
+
+.EmailBox .EmailPalette .EmailContents .flex-parent .flex-child {
+  width: 40%;
+}
+
+@media (max-width: 600px) {
+  .EmailBox .EmailPalette .EmailContents .flex-parent .flex-child {
+    margin: auto;
+    width: 90%;
+    margin-top: 15px;
+  }
+}
+
+.EmailBox .EmailPalette .EmailContents .flex-parent .flex-child .title h3 {
+  font-size: 20px;
+  color: #0fa06f;
+}
+
+@media (max-width: 600px) {
+  .EmailBox .EmailPalette .EmailContents .flex-parent .flex-child .title h3 {
+    font-size: 15px;
+  }
+}
+
+.EmailBox .EmailPalette .EmailContents .flex-parent .flex-child .select-box {
+  margin-top: 20px;
+}
+
+@media (max-width: 600px) {
+  .EmailBox .EmailPalette .EmailContents .flex-parent .flex-child .select-box {
+    margin-top: 10px;
+  }
+}
+
+.EmailBox .EmailPalette .EmailContents .flex-parent .flex-child .select-box select {
+  padding: 15px;
+  cursor: pointer;
+  background-color: #fff;
+  width: 100%;
+  font-size: 18px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+}
+
+@media (max-width: 600px) {
+  .EmailBox .EmailPalette .EmailContents .flex-parent .flex-child .select-box select {
+    padding: 10px;
+    font-size: 13.5px;
+  }
+}
+
+.EmailBox .EmailPalette .EmailContents .single-parent {
+  width: 100%;
+}
+
+@media (max-width: 600px) {
+  .EmailBox .EmailPalette .EmailContents .single-parent {
+    width: 90%;
+    margin: auto;
+  }
+}
+
+.EmailBox .EmailPalette .EmailContents .single-parent .single-child {
+  margin-top: 40px;
+}
+
+.EmailBox .EmailPalette .EmailContents .single-parent .single-child .title h3 {
+  font-size: 20px;
+  color: #0fa06f;
+}
+
+.EmailBox .EmailPalette .EmailContents .single-parent .single-child .text-box .TextField {
+  width: 100%;
+}
+
+.EmailBox .EmailPalette .EmailContents .single-parent .single-child .text-box textarea {
+  width: 100%;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.EmailBox .EmailPalette .EmailContents button {
+  margin-top: 10px;
+  padding: 1.1rem 2.5rem;
+  font-weight: 700;
+  font-size: 2.2rem;
+  border: none;
+  outline: none;
+  background: -webkit-gradient(linear, left top, right top, from(#7ed56f), to(#28b485));
+  background: linear-gradient(to right, #7ed56f, #28b485);
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.EmailBox .EmailPalette .EmailContents button:hover {
+  cursor: pointer;
+}
+
+.EmailBox .EmailPalette .EmailContents button:active, .EmailBox .EmailPalette .EmailContents button:focus, .EmailBox .EmailPalette .EmailContents button:visited {
+  outline: none;
+  border: none;
+}
+/*# sourceMappingURL=contact.css.map */
