--- a/client/src/assests/css/editProfile.css
+++ b/client/src/assests/css/editProfile.css
@@ -17,7 +17,6 @@
 
 .EditProfile .logo {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   padding: 10px 0;
@@ -45,7 +44,6 @@
   .EditProfile .register-box {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -86,11 +84,10 @@
 .EditProfile .side {
   margin-top: 15px;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+/*# sourceMappingURL=editProfile.css.map */
