--- a/client/src/assests/css/index.css
+++ b/client/src/assests/css/index.css
@@ -28,15 +28,11 @@ li {
 
 button:focus {
   -webkit-transform: translateY(0px);
-      -ms-transform: translateY(0px);
-       -o-transform: translateY(0px);
           transform: translateY(0px);
 }
 
 button:active {
   -webkit-transform: translateY(3px);
-      -ms-transform: translateY(3px);
-       -o-transform: translateY(3px);
           transform: translateY(3px);
 }
 
@@ -52,3 +48,4 @@ ul {
 .text-center {
   text-align: center;
 }
+/*# sourceMappingURL=index.css.map */
