--- a/client/src/assests/css/paymentConfirm.css
+++ b/client/src/assests/css/paymentConfirm.css
@@ -28,15 +28,11 @@ li {
 
 button:focus {
   -webkit-transform: translateY(0px);
-      -ms-transform: translateY(0px);
-       -o-transform: translateY(0px);
           transform: translateY(0px);
 }
 
 button:active {
   -webkit-transform: translateY(3px);
-      -ms-transform: translateY(3px);
-       -o-transform: translateY(3px);
           transform: translateY(3px);
 }
 
@@ -93,7 +89,6 @@ ul {
 
 .TeamInformations {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   border: 1px solid #c5c5c5;
@@ -111,7 +106,6 @@ ul {
   .TeamInformations {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
-    -webkit-flex-direction: column-reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
   }
@@ -131,7 +125,6 @@ ul {
   padding: 0;
   margin: 0;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   padding-bottom: 1.35rem;
@@ -141,7 +134,6 @@ ul {
   .TeamInformations .TeamDetails .td {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -154,32 +146,28 @@ ul {
 }
 
 .TeamInformations .TeamDetails .td p:last-child {
-  -webkit-align-self: flex-end;
-      -ms-flex-item-align: end;
-          align-self: flex-end;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
   font-size: 20px;
   padding-left: 1rem;
 }
 
 @media (max-width: 500px) {
   .TeamInformations .TeamDetails .td p:last-child {
-    -webkit-align-self: flex-start;
-        -ms-flex-item-align: start;
-            align-self: flex-start;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
     padding-left: 0rem;
   }
 }
 
 .RegFee {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
   text-align: center;
-  -webkit-align-self: center;
-      -ms-flex-item-align: center;
-              -ms-grid-row-align: center;
-          align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   font-size: 30px;
 }
 
@@ -212,3 +200,4 @@ ul {
     font-size: 20px;
   }
 }
+/*# sourceMappingURL=paymentConfirm.css.map */
